--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,4 +1,5 @@
 {
+  "build_entry_point": "op",
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
   "docsets_to_publish": [
@@ -37,5 +38,6 @@
   "branches_to_filter": [
     ""
   ],
-  "skip_source_output_uploading": false
+  "skip_source_output_uploading": false,
+  "dependent_repositories": []
 }
