--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -24,6 +24,7 @@
   "branches_to_filter": [
     ""
   ],
+  "continue_with_document_error": true,
   "skip_source_output_uploading": false,
   "dependent_repositories": [
     {
